.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
00:10:22 **** Rebuild of configuration Debug for project helloworld ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o Helloworld.o "..\\Helloworld.c" 
gcc -o helloworld.exe Helloworld.o 
Info: Nothing to build for helloworld
Info: Nothing to build for helloworld
Info: Nothing to build for helloworld
Info: Nothing to build for helloworld
00:22:21 **** Incremental Build of configuration Debug for project helloworld ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o Test.o "..\\Test.c" 
..\Test.c: In function 'main':
..\Test.c:5:16: warning: initialization makes integer from pointer without a cast [-Wint-conversion]
  char username="Subrat@2023"
                ^~~~~~~~~~~~~
..\Test.c:6:2: error: expected ',' or ';' before 'char'
  char userid[20];
  ^~~~
..\Test.c:8:14: error: 'userid' undeclared (first use in this function)
  scanf("%s",&userid);
              ^~~~~~
..\Test.c:8:14: note: each undeclared identifier is reported only once for each function it appears in
..\Test.c:9:22: warning: passing argument 2 of 'strcmp' makes pointer from integer without a cast [-Wint-conversion]
  while(strcmp(userid,username)!=0)
                      ^~~~~~~~
In file included from ..\Test.c:2:0:
c:\mingw\include\string.h:77:38: note: expected 'const char *' but argument is of type 'char'
 _CRTIMP __cdecl __MINGW_NOTHROW  int strcmp (const char *, const char *) __MINGW_ATTRIB_PURE;
                                      ^~~~~~
..\Test.c:13:20: warning: passing argument 2 of 'strcmp' makes pointer from integer without a cast [-Wint-conversion]
   if(strcmp(userid,username)==0)
                    ^~~~~~~~
In file included from ..\Test.c:2:0:
c:\mingw\include\string.h:77:38: note: expected 'const char *' but argument is of type 'char'
 _CRTIMP __cdecl __MINGW_NOTHROW  int strcmp (const char *, const char *) __MINGW_ATTRIB_PURE;
                                      ^~~~~~
00:32:27 **** Incremental Build of configuration Debug for project helloworld ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o Test.o "..\\Test.c" 
..\Test.c:3:1: error: unknown type name 'bool'
 bool strcomp(char 'a',char 'b')
 ^~~~
..\Test.c:3:19: error: expected ';', ',' or ')' before 'a'
 bool strcomp(char 'a',char 'b')
                   ^~~
..\Test.c: In function 'main':
..\Test.c:21:16: warning: initialization makes integer from pointer without a cast [-Wint-conversion]
  char username="Subrat@2023"
                ^~~~~~~~~~~~~
..\Test.c:22:2: error: expected ',' or ';' before 'char'
  char userid[20];
  ^~~~
..\Test.c:24:14: error: 'userid' undeclared (first use in this function)
  scanf("%s",&userid);
              ^~~~~~
..\Test.c:24:14: note: each undeclared identifier is reported only once for each function it appears in
..\Test.c:25:8: warning: implicit declaration of function 'strcomp' [-Wimplicit-function-declaration]
  while(strcomp(userid,username)!=0)
        ^~~~~~~
